<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="#FFEB3B">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="152dp"
        android:layout_height="157dp"
        android:contentDescription="@string/interrogacion"
        android:rotation="35"
        app:srcCompat="@drawable/baseline_question_mark_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="-21dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="152dp"
        android:layout_height="157dp"
        android:contentDescription="@string/interrogacion"
        android:rotation="-30"
        app:srcCompat="@drawable/baseline_question_mark_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="152dp"
        android:layout_height="157dp"
        android:contentDescription="@string/interrogacion"
        android:rotation="-50"
        app:srcCompat="@drawable/baseline_question_mark_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necesitas_ayuda"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="201dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="@color/black"
        android:text="@string/si"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/black"
        android:onClick="preguntaNO"
        android:text="@string/no"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="498dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>